--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 HELP.md
 .gradle
 build/
+application-real-db.properties
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+
 
 ### STS ###
 .apt_generated
