--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,9 @@ dependencies {
     //jpa
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
 
-    //h2 DB
+    //DB
     compile('com.h2database:h2')
+    compile('mysql:mysql-connector-java')
 
 }
 
