웹 클라이언트 이미지 입력 수정, json 라이브러리 추가

--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,10 @@ dependencies {
     compile('com.h2database:h2')
     compile('mysql:mysql-connector-java')
 
+    //json
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.7'
+
+
 }
 
 test {
