크롤링 데이터 post conroller 수정

--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     compile('mysql:mysql-connector-java')
 
     //json
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.7'
+//    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.7'
 
 
 }
