--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,20 @@ language: java
 jdk:
   - openjdk8
 
-branch:
-  -only:
+branches:
+  only:
     - master
 
-# Travis CI 서버의
+# Travis CI 서버의 Home
 cache:
   directories:
-    - '$Home/ .m2/repository
-    - '$Home/ .gradle
+    - '$Home/ .m2/repository'
+    - '$Home/ .gradle'
 
-script: "./gradlew clean build
 
+script: "./gradlew clean build"
+
+# CI 실행 완료 시 메일로 알람.
 notifications:
   email:
     recipients:
