--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,51 @@
 language: java
 jdk:
-  - openjdk11
+  - openjdk8
 
 branches:
   only:
     - master
 
-script: "./gradlew clean build"
-
-before_install:
-  - chmod +x ./gradlew
-
+# Travis CI 서버의 Home
 cache:
   directories:
-    - '$Home/ .m2/repository'
-    - '$Home/ .gradle'
+    - '$Home/.m2/repository'
+    - '$Home/.gradle'
 
 
+script: "./gradlew clean build"
+
+before_deploy:
+  - mkdir -p before-deploy
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+
+  - cd before-deploy && zip -r before-deploy *
+  - cd ../ && mkdir -p deploy
+  - mv before-deploy/before-deploy.zip deploy/pidetection-webServer.zip
+
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY  #Travis repo setting
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: pidetection-build #S3 버킷 이름.
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: private
+    local_dir: deploy
+    wait-untill-deployed: true
+
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: pidetection-build
+    key: pidetection-webServer.zip
+    bundle_type: zip
+    application: pidetection-webservice #CodeDeploy 애플리케이션
+    deployment_group: pidetections-webservice-group #CodeDeploy 배포 그룹
+    region: ap-northeast-2
+    wait_until-deployed: true
 
 # CI 실행 완료 시 메일로 알람.
 notifications:
