--- a/appspec.yml
+++ b/appspec.yml
@@ -7,13 +7,13 @@ files:
 
 permissions:
   - object: /
-    pattern: "**" # 모든 파일과 디렉토리
+    pattern: "**"
     owner: ec2-user
     group: ec2-user
 
 hooks:
   AfterInstall:
-    - location: stop.sh
+    - location: stop.sh # 연결되어 있지 않은 스프링 부트 종료.
       timeout: 60
       runas: ec2-user
 
@@ -23,6 +23,6 @@ hooks:
       runas: ec2-user
 
   ValidateService:
-    - location: health.sh
+    - location: health.sh # 정상 실행 여부 확인.
       timeout: 60
       runas: ec2-user
