--- a/build.gradle
+++ b/build.gradle
@@ -25,11 +25,9 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'junit:junit:4.12'
+    implementation 'junit:junit'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compile('org.springframework.boot:spring-boot-starter-web')
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 
     annotationProcessor('org.projectlombok:lombok')
